--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Student Management System</h1>
+    <h1>Student data Management System</h1>
     <input type="text" id="searchInput" placeholder="Search by name...">
     <form id="studentForm">
         <label for="name">Name:</label>
